--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
+# Specify language and versions to use where x is any tagged version and master is latest from source 
 language: go
+go:
+  - 1.x
+  - 1.9.x 
+  - master
+go_import_path: GOPATH/src/exercises/session-07-deployment/TravisDeployment
+sudo: false
 before_script:
   - go vet ./...
+script: 
+  - go test -v ./...
 install:
   # Add Godeps dependencies to GOPATH and PATH
   - export GOPATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace:$GOPATH"
